# game-tree

./: .gitignore  CMakeLists.txt
docs/: docs.drawio
example_src/: tictactoe.cpp
include/: bfs.hpp  game_engine.hpp  game_environment.hpp  node.hpp  tree.hpp  utils.hpp
src/: bfs.h  bfs.hpp  game_engine.hpp  game_state.hpp  tree.hpp
tests/tictactoe/: test_tictactoe.cpp  tictactoe_env.hpp
tmp/: ai_tree.hpp
